--- a/3-competition-launch/codabench/competition.yaml
+++ b/3-competition-launch/codabench/competition.yaml
@@ -21,14 +21,6 @@ pages:
 # Definition of the tasks
 tasks:
 - index: 0
-  name: Development Task
-  description: 'Development phase: create models and submit them to obtain feedback.'
-  is_public: false
-  input_data: feedback_phase/input_data         # Input data is given to the submitted code (X)
-  reference_data: feedback_phase/reference_data # Reference data is the ground truth (y)
-  scoring_program: scoring_program              # The scoring program compares predictions and ground truth
-  ingestion_program: ingestion_program          # The ingestion program takes a code submission and generates predictions
-- index: 1
   name: Final Task
   description: 'Final phase: submissions from the previous phase are automatically
     cloned and used to compute the final score. The results on the test set will be
@@ -46,50 +38,26 @@ solutions:
   - index: 0
     tasks:
     - 0
-    - 1
     path: solution/
 
 # There are 2 phases: development phase and final phase
 # Each one is linked to a task
 phases:
 - index: 0
-  name: Development
-  description: 'Development phase: create models and submit them to obtain feedback.
-      You can make 5 submissions per day and 100 submissions in total.'
-  start: 1-1-2024 # Month/Day/Year
-  end: 1-30-2026
-  max_submissions_per_day: 5
-  max_submissions: 100
-  execution_time_limit: 600
-  tasks:
-  - 0
-  solutions: []
-  starting_kit: starting_kit
-  public_data: feedback_phase/input_data
-- index: 1
   name: Final
   description: 'Final phase: submissions from the previous phase are automatically
     cloned and used to compute the final score. The results on the test set will be
     revealed when the organizers make them available.'
-  start: 2-1-2026 # Never ends
-  max_submissions_per_day: 0
-  max_submissions: 0
+  start: 1-1-2025 # Never ends
+  max_submissions_per_day: 999
+  max_submissions: 999
   execution_time_limit: 600
   tasks:
-  - 1
+  - 0
   solutions: []
 
 # Fact sheets to add more information in the leaderboard
-fact_sheet: {
-    "method_name": {
-        "key": "method_name",
-        "type": "text",
-        "title": "Method name",
-        "selection": "",
-        "is_required": "false",
-        "is_on_leaderboard": "true"
-    }
-}
+fact_sheet: {}
 
 # Leaderboard
 leaderboards:
