--- a/3-competition-launch/codabench/competition.yaml
+++ b/3-competition-launch/codabench/competition.yaml
@@ -1,12 +1,12 @@
 # This file contains the main settings of the benchmark
 # Learn more here: https://github.com/codalab/codabench/wiki/Yaml-Structure
-title: Mini-AutoML
+title: Dota 2 Message Classification for Auto-Moderation Purposes
 version: 2 # this means that it is a Codabench bundle
-description: AutoML Benchmark template with submission to multiple datasets
+description: ""
 image: logo.png
 registration_auto_approve: True  # do not require approval from organizers to join
 docker_image: codalab/codalab-legacy:py39 # the Docker image in which submissions are run
-enable_detailed_results: True
+enable_detailed_results: False
 
 # Documentation web pages
 terms: pages/terms.md
@@ -54,33 +54,11 @@ leaderboards:
   key: Results
   submission_rule: "Force_Last"
   columns:
-      - title: Average Accuracy
-        key: avg_accuracy
+      - title: Accuracy
+        key: accuracy
         index: 0
-        sorting: desc
-        computation: avg
-        computation_indexes:
-          - 1
-          - 2
-          - 3
-          - 4
-      - title: Dataset 1
-        key: dataset1
-        index: 1
-        sorting: desc
-      - title: Dataset 2
-        key: dataset2
-        index: 2
-        sorting: desc
-      - title: Dataset 3
-        key: dataset3
-        index: 3
-        sorting: desc
-      - title: Dataset 4
-        key: dataset4
-        index: 4
-        sorting: desc
+        sorting: asc
       - title: Duration
         key: duration
-        index: 5
+        index: 1
         sorting: asc
